# fn_macro

./: Cargo.toml  README.md
src/: async_run.rs  if_else.rs  if_ok_or_default.rs  if_panic.rs  if_unwrap_or_default.rs  lib.rs  map.rs  set.rs
tests/: lib.rs
