[package]
name = "fn_macro"
version = "0.1.1"
authors = ["ptechen <ptechen@github.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/fn_macro/blob/master/README.md"
repository = "https://github.com/ptechen/fn_macro.git"
description = "函数宏"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
